--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     html {
       background-color: #ddd;
     }
+
+    table.left-right th {
+      padding-right: 1em;
+    }
   </style>
 </head>
 
@@ -19,72 +23,69 @@
       <h1 class="title">
         Wisarut Borwornrattanapran
       </h1>
-      <p class="subtitle">
-        I'm Wisarut Borwornrattanapran.
-      </p>
       <article class="message">
         <div class="message-header">
-          <p>Personal Information</p>
-          <!-- <button class="delete" aria-label="delete"></button> -->
+          <p>Personal Details</p>
         </div>
         <div class="message-body">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis
-          placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et
-          dictum
-          <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et
-          sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et
-          sem
-          eget, facilisis sodales sem.
+          <table class="left-right" aria-describedby="pInfo">
+            <tr>
+              <th>Name</th>
+              <td>Wisarut Borwornrattanapran</td>
+            </tr>
+            <tr>
+              <th>Email</th>
+              <td><a href="mailto:xp.apollo@gmail.com">xp.apollo@gmail.com</a></td>
+            </tr>
+            <tr>
+              <th>Address</th>
+              <td>Tha Kham, Bang Khun Thian, Bangkok 10150</td>
+            </tr>
+          </table>
         </div>
       </article>
       <article class="message">
         <div class="message-header">
           <p>Education</p>
-          <!-- <button class="delete" aria-label="delete"></button> -->
         </div>
         <div class="message-body">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis
-          placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et
-          dictum
-          <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et
-          sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et
-          sem
-          eget, facilisis sodales sem.
+          <table class="left-right" aria-describedby="edu">
+            <tr>
+              <th>2013 - 2017</th>
+              <td><strong>Chulalongkorn University</strong><br>
+                Master's Degree in Management Information System (MIS) (GPA:3.62)</td>
+            <tr>
+            </tr>
+            <th>2002 - 2006</th>
+            <td><strong>King Mongkut's Institute of Technology Ladkrabang</strong><br>
+              Bachelor's Degree in Computer Engineer (GPA:2.23)</td>
+            </tr>
+          </table>
         </div>
       </article>
       <article class="message">
         <div class="message-header">
-          <p>Expereince</p>
-          <!-- <button class="delete" aria-label="delete"></button> -->
+          <p>Work Expereince</p>
         </div>
         <div class="message-body">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis
-          placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et
-          dictum
-          <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et
-          sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et
-          sem
-          eget, facilisis sodales sem.
+          <div class="columns">
+            <div class="column is-2">
+              Aug 2023 - Present
+            </div>
+            <div class="column is-10 content">
+              <strong>Project Manager at Muang Thai Life Assurance (AVP level)</strong><br>
+              Project Long Term Tech (LOF4POS)<ul>
+                <li>Transfer Knowledge and responsibility from vendor (migration)</li>
+                <li>Act as Team lead and improve members skill</li>
+                <dl>
+                  (JAVA8, Eclipse, AngularJS, WebLogic, Oracle DB)</dl>
+              </ul>
+            </div>
+          </div>
         </div>
       </article>
     </div>
   </section>
-
-
-  <!-- <article class="message">
-    <div class="message-header">
-      <p>Hello World</p>
-      <button class="delete" aria-label="delete"></button>
-    </div>
-    <div class="message-body">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis
-      placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum
-      <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et
-      sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem
-      eget, facilisis sodales sem.
-    </div>
-  </article> -->
-
 </body>
 
 </html>
