--- a/index.html
+++ b/index.html
@@ -1,91 +1,265 @@
 <!DOCTYPE html>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-  <title>Wisarut B's Portfolio</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-  <style>
-    html {
-      background-color: #ddd;
-    }
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <title>Wisarut B's Portfolio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+    />
+    <style>
+      html {
+        background-color: #ddd;
+      }
 
-    table.left-right th {
-      padding-right: 1em;
-    }
-  </style>
-</head>
+      table.left-right th {
+        padding-right: 1em;
+      }
 
-<body>
-  <section class="section">
-    <div class="container">
-      <h1 class="title">
-        Wisarut Borwornrattanapran
-      </h1>
-      <article class="message">
-        <div class="message-header">
-          <p>Personal Details</p>
-        </div>
-        <div class="message-body">
-          <table class="left-right" aria-describedby="pInfo">
-            <tr>
-              <th>Name</th>
-              <td>Wisarut Borwornrattanapran</td>
-            </tr>
-            <tr>
-              <th>Email</th>
-              <td><a href="mailto:xp.apollo@gmail.com">xp.apollo@gmail.com</a></td>
-            </tr>
-            <tr>
-              <th>Address</th>
-              <td>Tha Kham, Bang Khun Thian, Bangkok 10150</td>
-            </tr>
-          </table>
-        </div>
-      </article>
-      <article class="message">
-        <div class="message-header">
-          <p>Education</p>
-        </div>
-        <div class="message-body">
-          <table class="left-right" aria-describedby="edu">
-            <tr>
-              <th>2013 - 2017</th>
-              <td><strong>Chulalongkorn University</strong><br>
-                Master's Degree in Management Information System (MIS) (GPA:3.62)</td>
-            <tr>
-            </tr>
-            <th>2002 - 2006</th>
-            <td><strong>King Mongkut's Institute of Technology Ladkrabang</strong><br>
-              Bachelor's Degree in Computer Engineer (GPA:2.23)</td>
-            </tr>
-          </table>
-        </div>
-      </article>
-      <article class="message">
-        <div class="message-header">
-          <p>Work Expereince</p>
-        </div>
-        <div class="message-body">
-          <div class="columns">
-            <div class="column is-2">
-              Aug 2023 - Present
+      ul {
+        margin-top: 0 !important;
+        margin-bottom: 0 !important;
+      }
+
+      .content ul li {
+        font-size: 95%;
+      }
+    </style>
+  </head>
+
+  <body>
+    <section class="section">
+      <div class="container">
+        <h1 class="title">Wisarut Borwornrattanapran</h1>
+        <article class="message">
+          <div class="message-header">
+            <p>Personal Details</p>
+          </div>
+          <div class="message-body">
+            <table class="left-right" aria-describedby="pInfo">
+              <tr>
+                <th>Name</th>
+                <td>Wisarut Borwornrattanapran</td>
+              </tr>
+              <tr>
+                <th>Email</th>
+                <td>
+                  <a href="mailto:xp.apollo@gmail.com">xp.apollo@gmail.com</a>
+                </td>
+              </tr>
+              <tr>
+                <th>Address</th>
+                <td>Tha Kham, Bang Khun Thian, Bangkok 10150</td>
+              </tr>
+            </table>
+          </div>
+        </article>
+        <article class="message">
+          <div class="message-header">
+            <p>Education</p>
+          </div>
+          <div class="message-body">
+            <table class="left-right" aria-describedby="edu">
+              <tr>
+                <th>2013 - 2017</th>
+                <td>
+                  <b>Chulalongkorn University</b><br />
+                  Master's Degree in Management Information System (MIS)
+                  (GPA:3.62)
+                </td>
+              </tr>
+              <tr>
+                <th>2002 - 2006</th>
+                <td>
+                  <b>King Mongkut's Institute of Technology Ladkrabang</b><br />
+                  Bachelor's Degree in Computer Engineer (GPA:2.23)
+                </td>
+              </tr>
+            </table>
+          </div>
+        </article>
+        <article class="message">
+          <div class="message-header">
+            <p>Work Experience</p>
+          </div>
+          <div class="message-body">
+            <div class="columns">
+              <div class="column is-2">Aug 2023 - Present</div>
+              <div class="column is-10 content">
+                <b>Project Manager at Muang Thai Life Assurance (AVP level)</b
+                ><br />
+                Project Long Term Tech (LOF4POS)
+                <ul>
+                  <li>
+                    Transfer Knowledge and responsibility from vendor
+                    (migration)
+                  </li>
+                  <li>Act as Team lead and improve members skill</li>
+                </ul>
+                (JAVA8, Eclipse, AngularJS, WebLogic, Oracle DB)
+              </div>
             </div>
-            <div class="column is-10 content">
-              <strong>Project Manager at Muang Thai Life Assurance (AVP level)</strong><br>
-              Project Long Term Tech (LOF4POS)<ul>
-                <li>Transfer Knowledge and responsibility from vendor (migration)</li>
-                <li>Act as Team lead and improve members skill</li>
-                <dl>
-                  (JAVA8, Eclipse, AngularJS, WebLogic, Oracle DB)</dl>
-              </ul>
+            <div class="columns">
+              <div class="column is-2">Feb 2019 –Jul 2023</div>
+              <div class="column is-10 content">
+                <b
+                  >System Analyst/Team Lead at Ayudhya Capital Services Ltd.
+                  (Manager level)</b
+                ><br />
+                <ul>
+                  <li>
+                    Act as team lead for insurance broker (Lotus's
+                    money,Krungsri Broker)
+                  </li>
+                  <li>
+                    Develop microservice for online website channel (JAVA,
+                    VueJs)
+                  </li>
+                  <li>
+                    Project LocalAgent replace Java applet with Node.js / Golang
+                    via http on client side for EDC communication, image
+                    processing. file transfer
+                  </li>
+                </ul>
+                (JAVA11, Spring Framework, VueJs, Node.js, Golang, Openshift,
+                Jenkins, Oracle)
+              </div>
+            </div>
+            <div class="columns">
+              <div class="column is-2">Jul 2017 - Feb 2019</div>
+              <div class="column is-10 content">
+                <b>Senior Credit Risk Officer at Government Housing Bank</b
+                ><br />
+                <ul>
+                  <li>
+                    Act as developer team lead for internal workflow and MIS
+                    system
+                  </li>
+                  <li>Design and develop "360° Smart View Intelligent"</li>
+                </ul>
+                (Node.js, JavaScript, PHP, SQL Server 2016)
+              </div>
+            </div>
+            <div class="columns">
+              <div class="column is-2">Dec2016 - June 2017</div>
+              <div class="column is-10 content">
+                <b>System Analyst at GlobeTech Co., Ltd. (Affiliates of CDG)</b
+                ><br />
+                <ul>
+                  <li>
+                    Develop GPS Tracking System "NOSTRA Logistics" (version 2)
+                  </li>
+                  <li>
+                    Customize system "NOSTRA Logistics" (version 1) for customer
+                  </li>
+                </ul>
+                (Visual Studio 2015 C#, SQL Server 2012, QGIS)
+              </div>
+            </div>
+            <div class="columns">
+              <div class="column is-2">Feb 2016 - Nov 2016</div>
+              <div class="column is-10 content">
+                <b
+                  >System Analyst/Developer (Contract)at Ayudhya Capital
+                  Services Ltd.</b
+                ><br />
+                <ul>
+                  <li>
+                    Develop and Implement system change request on "Decision
+                    Module" in "Underwriting System"/ "New Application" (support
+                    Risk Management Department) including NCB, Credit Score (A/B
+                    Score)
+                  </li>
+                </ul>
+                (JAVA6/EJB, Eclipse, Oracle 11g PL/SQL, R/Python for Statistics)
+              </div>
+            </div>
+            <div class="columns">
+              <div class="column is-2">Feb 2015 - Oct 2015</div>
+              <div class="column is-10 content">
+                <b
+                  >Programmer Analyst (Contract) at MIMO Tech Co., Ltd.
+                  (Subsidiary AIS)</b
+                ><br />
+                <ul>
+                  <li>
+                    Develop and Maintenance for USSD Response Application.
+                  </li>
+                </ul>
+                (JAVA7, Eclipse 4.4, Hibernate, Redhat Linux)
+              </div>
+            </div>
+            <div class="columns">
+              <div class="column is-2">Sep 2013 - Jan 2015</div>
+              <div class="column is-10 content">
+                <b>Senior Programmer at Mobile Innovation Co.,Ltd.</b><br />
+                <ul>
+                  <li>
+                    Develop and Maintenance for GPS Tracking System (GTS) with
+                    Google Map
+                  </li>
+                  <li>
+                    Develop and Maintenance for Data warehouse (summary report &
+                    abnormal detect with association and clustering technique)
+                  </li>
+                </ul>
+                (JAVA7, Eclipse 4.4, SVN, Google Map API, MySQL 5, Nodejs,
+                CentOS Linux, Python/R)
+              </div>
+            </div>
+            <div class="columns">
+              <div class="column is-2">Oct 2012 -Feb 2013</div>
+              <div class="column is-10 content">
+                <b>Senior Programmer at Areeya Property PLC.</b><br />
+                <ul>
+                  <li>Develop a land transfers system "Sales Online"</li>
+                  <li>
+                    Develop a public utilities charge system "Community Mall
+                    System"
+                  </li>
+                </ul>
+                (JAVA6, Eclipse 4.4, SQL Server 2008,Visual studio 2010 VB)
+              </div>
+            </div>
+            <div class="columns">
+              <div class="column is-2">Aug 2009 - Sep 2012</div>
+              <div class="column is-10 content">
+                <b>Credit Risk Officer at Government Housing Bank</b><br />
+                <ul>
+                  <li>
+                    Develop and Maintenance web application "Credit risk review
+                    system"
+                  </li>
+                  <li>
+                    Develop utilities tools such as Interest Calculator etc.
+                  </li>
+                  <li>
+                    Audit Database to identify risk. (Abnormal detect with
+                    association and clustering technique)
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="columns">
+              <div class="column is-2">Apr 2006 - Mar 2007</div>
+              <div class="column is-10 content">
+                <b>Junior Engineer at Sony Devices Technology</b><br />
+                <ul>
+                  <li>
+                    Develop and Maintenance web application "Handler parameter"
+                  </li>
+                  <li>
+                    Problem investigation for computer in production line.
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
-      </article>
-    </div>
-  </section>
-</body>
-
+        </article>
+      </div>
+    </section>
+  </body>
 </html>
